--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,6 +173,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/Eternal")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Eternal")
+NearClipPlane=10.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
